[gd_scene load_steps=4 format=2]

[ext_resource path="res://object/Shelf/Shelf.gd" type="Script" id=1]
[ext_resource path="res://object/Shelf/Book.tscn" type="PackedScene" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Shelf" type="Node2D"]
position = Vector2( 0, -1.68179 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Book" parent="." instance=ExtResource( 2 )]
position = Vector2( -138.764, -60.4558 )
rotation = -1.64952

[node name="Book2" parent="." instance=ExtResource( 2 )]
position = Vector2( -108.799, -101.868 )

[node name="Book3" parent="." instance=ExtResource( 2 )]
position = Vector2( -107.66, -12.9267 )

[node name="Book4" parent="." instance=ExtResource( 2 )]
position = Vector2( -88.4299, -19.1263 )
rotation = -0.55412
